# sample_ai

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: main.py
src/: App.jsx  gameLogic.js  index.css
